tekton/pipeline-java/kustomize/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: starter
spec:
  replicas: 3
  selector:
    matchLabels:
      app: starter
  template:
    metadata:
      labels:
        app: starter
    spec:
      containers:
        - name: starter
          image: registry.example.com/starter:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
              name: http
